ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intel_Report_Users_by_Role__c/Intel_Report_Users_by_Role__c.object-meta.xml
<CustomObject>
    <label>Intel Report User by Role</label>
    <nameField>
        <displayFormat>IRUR-{000}</displayFormat>
        <label>Intel Report User by Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intel Report Users by Role</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>