ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intel_Report_Users_by_Role__c/fields/Intel_Report_Role__c.field-meta.xml
<CustomField>
    <fullName>Intel_Report_Role__c</fullName>
    <label>Intel Report Role</label>
    <referenceTo>Intel_Report_Role__c</referenceTo>
    <relationshipLabel>Intel Report Users by Role</relationshipLabel>
    <relationshipName>Intel_Report_Users_by_Role</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>