ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intel_Report_Users_by_Role__c/fields/UniqueCheck__c.field-meta.xml
<CustomField>
    <fullName>UniqueCheck__c</fullName>
    <description>Used to prevent an IKO User from being a Sales Rep in more than one branch in the hierarchy, or in the same location twice.  A user can be a manager multiple times, but not a Sales Rep</description>
    <label>UniqueCheck</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>