ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intel_Report_Users_by_Role__c/validationRules/No_Sales_Reps_in_Non_Hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Sales_Reps_in_Non_Hierarchy</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
Intel_Report_Role__r.Name = &quot;Commercial Manufacturing Manager&quot;,
Intel_Report_Role__r.Name = &quot;Commercial Product Manager&quot;,
Intel_Report_Role__r.Name = &quot;Regional Manufacturing Manager&quot;,
Intel_Report_Role__r.Name = &quot;Residential Product Manager&quot;
),
TEXT( Role_Type__c ) = &quot;Sales Rep&quot;
)</errorConditionFormula>
    <errorMessage>Only Managers can be part of this Intel Role</errorMessage>
</ValidationRule>