ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intel_Report_Users_by_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intel_Report_User__c</columns>
    <columns>Intel_Report_Role__c</columns>
    <columns>Role_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intel_Report_Role__c</field>
        <operation>equals</operation>
        <value>IKO North America,CA Commercial,US Commercial</value>
    </filters>
    <label>All</label>
</ListView>